traces/bug_632.txt
examples++-load/Element_Mixte3d.cpp:805: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of Fem2D::TypeOfFE_Edge2_3d::QFf accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/Element_Mixte3d.cpp:805:5: initialization of Fem2D::TypeOfFE_Edge2_3d::QFf
803.           GQuadraturePoint<R2>(0.4467631793560/2,R2(0.4459484909160,0.1081030181681)) ,
804.           GQuadraturePoint<R2>(0.4467631793560/2,R2(0.4459484909160,0.4459484909160)) };
805.       const GQuadratureFormular<R2> TypeOfFE_Edge2_3d:: QFf(4,6,P_QuadratureFormular_T_4_TWB);
           ^
806.       
807.       // Quadrature formula on a tetrahedron, exact for degree 3 (ok: int_v (deg3*t))

examples++-load/Element_Mixte3d.cpp:805:55: call to Fem2D::GQuadratureFormular<Fem2D::R2>_GQuadratureFormular
803.           GQuadraturePoint<R2>(0.4467631793560/2,R2(0.4459484909160,0.1081030181681)) ,
804.           GQuadraturePoint<R2>(0.4467631793560/2,R2(0.4459484909160,0.4459484909160)) };
805.       const GQuadratureFormular<R2> TypeOfFE_Edge2_3d:: QFf(4,6,P_QuadratureFormular_T_4_TWB);
                                                             ^
806.       
807.       // Quadrature formula on a tetrahedron, exact for degree 3 (ok: int_v (deg3*t))

src/femlib/QuadratureFormular.hpp:85:51: call to Fem2D::GQuadratureFormular<Fem2D::R2>_Verification
  83.     void Verification(); // for verification 
  84.     GQuadratureFormular (int e,int NbOfNodes,QuadraturePoint *pp,bool c=false)
  85.    :exact(e), n(NbOfNodes),size(n),p(pp),clean(c)  {Verification();}
                                                          ^
  86.     GQuadratureFormular (int e,int NbOfNodes,const QuadraturePoint *pp,bool c=false)
  87.    :exact(e),n(NbOfNodes),p(pp),clean(c)   {Verification();}

src/femlib/QuadratureFormular.cpp:665:4: access to std::cout|
  663.         if (err>tol)
  664.   	{
  665.   	  cerr << " d= " << d << "T Ordre= " << k << " d!k!/(d+k)!= " << se << " " ;
            ^
  666.   	  for(int l=0;l<=d;++l)
  667.   	    cerr << sa[l] << " ";
